--- a/package.json
+++ b/package.json
@@ -16,5 +16,12 @@
   "bugs": {
     "url": "https://github.com/alisonjoseph/alisonjoseph/issues"
   },
-  "homepage": "https://github.com/alisonjoseph/alisonjoseph#readme"
+  "homepage": "https://github.com/alisonjoseph/alisonjoseph#readme",
+  "dependencies": {
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.2",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-react": "^6.24.1",
+    "webpack": "^3.11.0"
+  }
 }
